--- a/pantry-app/package.json
+++ b/pantry-app/package.json
@@ -12,11 +12,11 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.5",
-    "firebase": "^10.12.4",
+    "reactfire": "^4.3.0",
+    "firebase": "^9.0.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "reactfire": "^5.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
